# pong

./: .gitignore  CMakeLists.txt  README.md
src/: ball.cpp  ball.h  main.cpp  paddle.cpp  paddle.h
